--- a/src/globals.css
+++ b/src/globals.css
@@ -1,6 +1,7 @@
 /* Variables */
 :root {
   --background-color: #f7f7f7;
+  --spot-color: white;
   --primary-color: #ff781f;
   --secondary-color: #333;
   --tertiary-color: #707070;
