Squashed commit of the following:
commit f6e395778a3cd11d4c1c9a07518b515476dad342
Author: Danny White <3104761+dnywh@users.noreply.github.com>
Date:   Wed Jul 30 14:31:59 2025 +1000

    fix: style tweaks

commit 13378f68ed97e7b967dc7a7e73a9b3f92aa9677a
Author: Danny White <3104761+dnywh@users.noreply.github.com>
Date:   Wed Jul 30 14:28:44 2025 +1000

    fix: button shadow

commit f71aa89426cc4a8c6906f6e4445b12eb21114f6c
Author: Danny White <3104761+dnywh@users.noreply.github.com>
Date:   Wed Jul 30 14:26:26 2025 +1000

    feat: just me recordings

commit 5b58a5dba1c28becfed4418b0a2d60ebb5dce106
Author: Danny White <3104761+dnywh@users.noreply.github.com>
Date:   Wed Jul 30 14:08:36 2025 +1000

    feat: synced playback and buttons

--- a/src/globals.css
+++ b/src/globals.css
@@ -4,12 +4,12 @@
   --spot-color-white: white;
   --spot-color-black: black;
   --primary-color: #ff781f;
-  --spot-color-red: #ff3636;
+  --spot-color-red: #ff1f1f;
   --secondary-color: #333;
   --tertiary-color: #707070;
   --button-color-pressed: #eaeaea;
   --state-color-success: #7af286;
-  --padding-page: 2rem;
+  --padding-page: 1.5rem;
 }
 
 /* CSS Reset */
