Squashed commit of the following:
commit 056aeecbc59b12675f437cedf9f8aa02c98c909e
Author: Danny White <3104761+dnywh@users.noreply.github.com>
Date:   Wed Jul 30 16:10:46 2025 +1000

    fix: cleanup isPaused

commit 71987a01722483f90133c57eb1a18745d000ad60
Author: Danny White <3104761+dnywh@users.noreply.github.com>
Date:   Wed Jul 30 16:08:05 2025 +1000

    fix: remove redundant isPaused

commit 12c1790b400fb51a995a158382ac19e0e7681fd2
Author: Danny White <3104761+dnywh@users.noreply.github.com>
Date:   Wed Jul 30 15:59:05 2025 +1000

    fix: language

commit 8c14e31207b21ce31abbe5b9714c875bb56b4d18
Author: Danny White <3104761+dnywh@users.noreply.github.com>
Date:   Wed Jul 30 15:58:53 2025 +1000

    chore: tidy

commit 03e8551e4807b9cc61547f2676d03d5d8bc78eff
Author: Danny White <3104761+dnywh@users.noreply.github.com>
Date:   Wed Jul 30 15:58:32 2025 +1000

    chore: tidy

commit 1d5430dcda907e7b62b07cad5e6e7f1cb6aa95cf
Author: Danny White <3104761+dnywh@users.noreply.github.com>
Date:   Wed Jul 30 14:58:36 2025 +1000

    fix: working remote button press

commit ef6c16ffa528ff246120496774f11bb231600743
Author: Danny White <3104761+dnywh@users.noreply.github.com>
Date:   Wed Jul 30 14:44:11 2025 +1000

    feat: broadcast

--- a/src/globals.css
+++ b/src/globals.css
@@ -8,6 +8,7 @@
   --secondary-color: #333;
   --tertiary-color: #707070;
   --button-color-pressed: #eaeaea;
+  --button-color-remote-pressed: #f7f7f7;
   --state-color-success: #7af286;
   --padding-page: 1.5rem;
 }
